v1.0.0/modules/schema/pages/class/ConcentricNeutralCableInfo.adoc
= `ConcentricNeutralCableInfo`
:toclevels: 4


+++Concentric neutral cable data.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ConcentricNeutralCableInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** xref::class/WireInfo.adoc[`WireInfo`]
**** xref::class/CableInfo.adoc[`CableInfo`]
***** *`ConcentricNeutralCableInfo`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ConcentricNeutralCableInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







































WirePhaseInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ACLineSegmentPhase {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CatalogAssetType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






















ConcentricNeutralCableInfo -> WirePhaseInfo: WirePhaseInfo


ConcentricNeutralCableInfo -> ACLineSegmentPhase: ACLineSegmentPhase


ConcentricNeutralCableInfo -> PowerSystemResource: PowerSystemResources


ConcentricNeutralCableInfo -> CatalogAssetType: CatalogAssetType


ConcentricNeutralCableInfo -> Asset: Assets


ConcentricNeutralCableInfo -> ProductAssetModel: ProductAssetModel


ConcentricNeutralCableInfo -> DiagramObject: DiagramObjects


ConcentricNeutralCableInfo -> InstanceSet: InstanceSet


ConcentricNeutralCableInfo -> Name: Names


ConcentricNeutralCableInfo -> ChangeSetMember: PropertiesCIMDataObject


ConcentricNeutralCableInfo -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<diameterOverNeutral,`diameterOverNeutral`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Diameter over the concentric neutral strands.+++

| <<neutralStrandCount,`neutralStrandCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of concentric neutral strands.+++

| <<neutralStrandGmr,`neutralStrandGmr`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Geometric mean radius of the neutral strand.+++

| <<neutralStrandRDC20,`neutralStrandRDC20`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++DC resistance per unit length of the neutral strand at 20 °C.+++

| <<neutralStrandRadius,`neutralStrandRadius`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Outside radius of the neutral strand.+++

| <<CatalogAssetType,`CatalogAssetType`>>
| 0..1
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++

| <<ProductAssetModel,`ProductAssetModel`>>
| 0..1
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<constructionKind,`constructionKind`>>
| 0..1
| xref::enumeration/CableConstructionKind.adoc[`CableConstructionKind`]
| +++Kind of construction of this cable.+++

| <<coreRadius,`coreRadius`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++(if there is a different core material) Radius of the central core.+++

| <<coreStrandCount,`coreStrandCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++(if used) Number of strands in the steel core.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<diameterOverCore,`diameterOverCore`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Diameter over the core, including any semi-con screen; should be the insulating layer's inside diameter.+++

| <<diameterOverInsulation,`diameterOverInsulation`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Diameter over the insulating layer, excluding outer screen.+++

| <<diameterOverJacket,`diameterOverJacket`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Diameter over the outermost jacketing layer.+++

| <<diameterOverScreen,`diameterOverScreen`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Diameter over the outer screen; should be the shield's inside diameter.+++

| <<gmr,`gmr`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Geometric mean radius. If we replace the conductor by a thin walled tube of radius GMR, then its reactance is identical to the reactance of the actual conductor.+++

| <<insulated,`insulated`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if conductor is insulated.+++

| <<insulationMaterial,`insulationMaterial`>>
| 0..1
| xref::enumeration/WireInsulationKind.adoc[`WireInsulationKind`]
| +++(if insulated conductor) Material used for insulation.+++

| <<insulationThickness,`insulationThickness`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++(if insulated conductor) Thickness of the insulation.+++

| <<isStrandFill,`isStrandFill`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if wire strands are extruded in a way to fill the voids in the cable.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<material,`material`>>
| 0..1
| xref::enumeration/WireMaterialKind.adoc[`WireMaterialKind`]
| +++Conductor material.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<nominalTemperature,`nominalTemperature`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Maximum nominal design operating temperature.+++

| <<outerJacketKind,`outerJacketKind`>>
| 0..1
| xref::enumeration/CableOuterJacketKind.adoc[`CableOuterJacketKind`]
| +++Kind of outer jacket of this cable.+++

| <<rAC25,`rAC25`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++AC resistance per unit length of the conductor at 25 °C.+++

| <<rAC50,`rAC50`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++AC resistance per unit length of the conductor at 50 °C.+++

| <<rAC75,`rAC75`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++AC resistance per unit length of the conductor at 75 °C.+++

| <<rDC20,`rDC20`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++DC resistance per unit length of the conductor at 20 °C.+++

| <<radius,`radius`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++Outside radius of the wire.+++

| <<ratedCurrent,`ratedCurrent`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Current carrying capacity of the wire under stated thermal conditions.+++

| <<sheathAsNeutral,`sheathAsNeutral`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if sheath / shield is used as a neutral (i.e., bonded).+++

| <<shieldMaterial,`shieldMaterial`>>
| 0..1
| xref::enumeration/CableShieldMaterialKind.adoc[`CableShieldMaterialKind`]
| +++Material of the shield.+++

| <<sizeDescription,`sizeDescription`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Describes the wire gauge or cross section (e.g., 4/0, #2, 336.5).+++

| <<strandCount,`strandCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of strands in the conductor.+++

| <<ACLineSegmentPhase,`ACLineSegmentPhase`>>
| 0..*
| xref::class/ACLineSegmentPhase.adoc[`ACLineSegmentPhase`]
| +++AC line segment phase information associated with this wire information.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<WirePhaseInfo,`WirePhaseInfo`>>
| 0..*
| xref::class/WirePhaseInfo.adoc[`WirePhaseInfo`]
| +++Wire phase information associated with this wire information.+++
|===

'''


//[discrete]
[#ACLineSegmentPhase]
=== `ACLineSegmentPhase`
+++AC line segment phase information associated with this wire information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.ACLineSegmentPhase`
| Cardinality
| 0..*
| Type
| xref::class/ACLineSegmentPhase.adoc[`ACLineSegmentPhase`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#constructionKind]
=== `constructionKind`
+++Kind of construction of this cable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.constructionKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CableConstructionKind.adoc[`CableConstructionKind`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#coreRadius]
=== `coreRadius`
+++(if there is a different core material) Radius of the central core.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.coreRadius`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#coreStrandCount]
=== `coreStrandCount`
+++(if used) Number of strands in the steel core.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.coreStrandCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#diameterOverCore]
=== `diameterOverCore`
+++Diameter over the core, including any semi-con screen; should be the insulating layer's inside diameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverCore`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#diameterOverInsulation]
=== `diameterOverInsulation`
+++Diameter over the insulating layer, excluding outer screen.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverInsulation`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#diameterOverJacket]
=== `diameterOverJacket`
+++Diameter over the outermost jacketing layer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverJacket`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#diameterOverNeutral]
=== `diameterOverNeutral`
+++Diameter over the concentric neutral strands.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConcentricNeutralCableInfo.diameterOverNeutral`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#diameterOverScreen]
=== `diameterOverScreen`
+++Diameter over the outer screen; should be the shield's inside diameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverScreen`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#gmr]
=== `gmr`
+++Geometric mean radius. If we replace the conductor by a thin walled tube of radius GMR, then its reactance is identical to the reactance of the actual conductor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.gmr`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#insulated]
=== `insulated`
+++True if conductor is insulated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.insulated`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#insulationMaterial]
=== `insulationMaterial`
+++(if insulated conductor) Material used for insulation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.insulationMaterial`
| Cardinality
| 0..1
| Type
| xref::enumeration/WireInsulationKind.adoc[`WireInsulationKind`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#insulationThickness]
=== `insulationThickness`
+++(if insulated conductor) Thickness of the insulation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.insulationThickness`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#isStrandFill]
=== `isStrandFill`
+++True if wire strands are extruded in a way to fill the voids in the cable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.isStrandFill`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#material]
=== `material`
+++Conductor material.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.material`
| Cardinality
| 0..1
| Type
| xref::enumeration/WireMaterialKind.adoc[`WireMaterialKind`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#neutralStrandCount]
=== `neutralStrandCount`
+++Number of concentric neutral strands.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConcentricNeutralCableInfo.neutralStrandCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#neutralStrandGmr]
=== `neutralStrandGmr`
+++Geometric mean radius of the neutral strand.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConcentricNeutralCableInfo.neutralStrandGmr`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#neutralStrandRadius]
=== `neutralStrandRadius`
+++Outside radius of the neutral strand.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConcentricNeutralCableInfo.neutralStrandRadius`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#neutralStrandRDC20]
=== `neutralStrandRDC20`
+++DC resistance per unit length of the neutral strand at 20 °C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConcentricNeutralCableInfo.neutralStrandRDC20`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]


|===

//[discrete]
[#nominalTemperature]
=== `nominalTemperature`
+++Maximum nominal design operating temperature.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.nominalTemperature`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#outerJacketKind]
=== `outerJacketKind`
+++Kind of outer jacket of this cable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.outerJacketKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CableOuterJacketKind.adoc[`CableOuterJacketKind`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#rAC25]
=== `rAC25`
+++AC resistance per unit length of the conductor at 25 °C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rAC25`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#rAC50]
=== `rAC50`
+++AC resistance per unit length of the conductor at 50 °C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rAC50`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#rAC75]
=== `rAC75`
+++AC resistance per unit length of the conductor at 75 °C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rAC75`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#radius]
=== `radius`
+++Outside radius of the wire.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.radius`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#ratedCurrent]
=== `ratedCurrent`
+++Current carrying capacity of the wire under stated thermal conditions.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.ratedCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#rDC20]
=== `rDC20`
+++DC resistance per unit length of the conductor at 20 °C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rDC20`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#sheathAsNeutral]
=== `sheathAsNeutral`
+++True if sheath / shield is used as a neutral (i.e., bonded).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.sheathAsNeutral`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#shieldMaterial]
=== `shieldMaterial`
+++Material of the shield.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.shieldMaterial`
| Cardinality
| 0..1
| Type
| xref::enumeration/CableShieldMaterialKind.adoc[`CableShieldMaterialKind`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

//[discrete]
[#sizeDescription]
=== `sizeDescription`
+++Describes the wire gauge or cross section (e.g., 4/0, #2, 336.5).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.sizeDescription`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#strandCount]
=== `strandCount`
+++Number of strands in the conductor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.strandCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WirePhaseInfo]
=== `WirePhaseInfo`
+++Wire phase information associated with this wire information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.WirePhaseInfo`
| Cardinality
| 0..*
| Type
| xref::class/WirePhaseInfo.adoc[`WirePhaseInfo`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===


